--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
@@ -158,7 +158,7 @@
     <li>Update your direct deposit information</li>
   </ol>		
 <h3 class=h4>If you can't sign in to My Business Account</h3>
-	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel3">update your information through your Canadian bank or credit union</a>.</p>
+	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in, you will have to <a href="#details-panel3">update your information through your Canadian bank or credit union</a>.</p>
 	<p>For more help with My Business Account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=mybusacct">Help with using My Business Account</a></p>
 			
 <!--	<details><summary class="max-content">Make a change for someone else</summary>	
