--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-trusts.html
@@ -104,7 +104,9 @@
 	  <!-- <p>Sign up for direct deposit or update your information with your bank account information, which is on your personal cheques or online banking portal. If you can't find the information, contact your financial institution.</p>-->
 
 	 <!--  <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>-->
-	      <div class="wb-tabs mrgn-tp-lg">
+	      <h2>Ways to update your direct deposit information</h2>
+	   <p class="hidden-md hidden-lg">Choose an option to learn how to make changes to your direct deposit information.</p>    
+	   <div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
@@ -133,9 +135,9 @@
 </ul>
 		     </li></ul>
   </ol>		
-<h3 class="h4 class="mrgn-tp-xl">If you can't access your account</h3>
-	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by mail</a>.</p>
-	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>
+<h3 class="h4 class="mrgn-tp-xl">If you can't sign in to Represent a Client</h3>
+	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in, you will have to <a href="#details-panel2">update your information by mail</a>.</p>
+	<p>For more help with Represent a Client, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using Represent a Client</a></p>
 </details>
 		<details id="details-panel2" class="provisional wb-details-close">
             <summary><span class="fas fa-envelope mrgn-rght-sm"></span>By mail</summary>
@@ -183,7 +185,7 @@
 	   
 	   <h2>Change your direct deposit information with other government departments</h2>
 	   <p>You need to contact each government organization that sends payments to you to give them your updated information.</p>
-	   <p>The CRA wil <strong>not</strong> share your direct deposit information with other government departments.</p>
+	   <p>The CRA will <strong>not</strong> share your direct deposit information with other government departments.</p>
 	   <p><a href="https://www.canada.ca/en/public-services-procurement/services/payments-to-from-government/direct-deposit.html">Change your direct deposit information with a different department or agency</a></p>
 
 	    <!-- <p>The <abbr title="Canada Revenue Agency">CRA</abbr> will <strong>not</strong> share your direct deposit information with other government departments.</p>-->
