--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
@@ -139,6 +139,7 @@
 	   </ul>
 	 <!--  <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>-->
      <h2>Ways to update your direct deposit information</h2>
+	   <p class="hidden-md hidden-lg">Choose an option to learn how to make changes to your direct deposit information.</p>
 	   <div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
