--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-non-residents.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-non-residents.html
@@ -82,7 +82,7 @@
 
 <div class="mwstitle section">
 <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">Payments the CRA sends you</p>
-<h1 class="mrgn-tp-0" id="wb-cont">Direct deposit for non-residents</h1>
+<h1 class="mrgn-tp-0" id="wb-cont">Direct deposit for non-resident individuals, businesses and trusts</h1>
 </div>
 
 
