--- a/en/revenue-agency/services/update-information.html
+++ b/en/revenue-agency/services/update-information.html
@@ -56,11 +56,11 @@
   <div class="wb-eqht row">
     <div class="col-lg-4 col-md-6"> 
       <!--  <h3><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">[Change your address <mark>or phone number</mark>]]</a></h3> -->
-      <h3><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Personal updates</a></h3>
+      <h3><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Individuals</a></h3>
       <p>Change your address, phone number, email, marital status, or name</p>
     </div>
     <div class="col-lg-4 col-md-6">
-      <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business.html">Business updates</a></h3>
+      <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business.html">Businesses</a></h3>
       <p>Change of owners, partners or directors, your operating name, address, and more</p>
     </div>
     <!--      <div class="col-lg-4 col-md-6">
@@ -68,7 +68,7 @@
                         <p>Text</p>
                     </div>-->
     <div class="col-lg-4 col-md-6">
-      <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes.html">Charities updates</a></h3>
+      <h3><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes.html">Charities</a></h3>
       <p>Change contact information and details about the director, legal name and status, designation and purposes</p>
     </div>
     
