--- a/en/revenue-agency/services/update-information.html
+++ b/en/revenue-agency/services/update-information.html
@@ -57,7 +57,7 @@
     <div class="col-lg-4 col-md-6"> 
       <!--  <h3><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">[Change your address <mark>or phone number</mark>]]</a></h3> -->
       <h3><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html">Individuals</a></h3>
-      <p>Change your address, phone number, email, marital status, or name</p>
+      <p>Change your personal address, phone number, email, marital status, or name</p>
     </div>
     <div class="col-lg-4 col-md-6">
       <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business.html">Businesses</a></h3>
