--- a/en/revenue-agency/services/update-information/update-personal-information.html
+++ b/en/revenue-agency/services/update-information/update-personal-information.html
@@ -66,7 +66,7 @@
     </div>
     <div class="col-lg-4 col-md-6">
       <h3><a href="/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html">Change your phone number</a></h3>
-      <p>Add or change a home or cellphone number, update your phone number for multi-factor authentication (MFA)</p>
+      <p>Add or change a phone number for your contact information or for multi-factor authentication (MFA)</p>
     </div>
     <div class="col-lg-4 col-md-6">
       <h3><a href="/sign-in-test/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html">Change your email address</a></h3>
