--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-address.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-address.html
@@ -132,9 +132,9 @@
     <li>Select <strong>Edit</strong></li>
   </ol>
 </details> -->
-<h2 class=h4>If you can't sign in to your account</h2>
-	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>	<!--<details><summary class="max-content">Make a change for someone else</summary>	-->
+<h2 class=h4>If you can't sign in to My Account</h2>
+	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
+<p>For more help with My Account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help with using My Account</a></p>	<!--<details><summary class="max-content">Make a change for someone else</summary>	-->
 			<h2 class=h4>Make a change for someone else</h2>
 		<p>To change an address online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
 
