--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-phone.html
@@ -123,9 +123,9 @@
   
 
 	
-<h2 class="h4 mrgn-tp-xl">If you can't sign in to your account</h2> 
-	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>	
+<h2 class="h4 mrgn-tp-xl">If you can't sign in to My Account</h2> 
+	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign int, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
+<p>For more help with My Account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help with using My Account</a></p>	
 <!--<details><summary class="max-content">Make a change for someone else</summary>-->
 			<h2 class=h4>Make a change for someone else</h2>
 		 <p>To change a phone number online for someone else, including a spouse or family member, you must be an authorized representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
