--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html
@@ -112,9 +112,9 @@
 			
 			
 	 
-<h2 class=h4>If you can't sign in to your account</h2>
-	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>
+<h2 class=h4>If you can't sign in to My Account</h2>
+	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
+<p>For more help with My Account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help with using My Accounts</a></p>
 	<!--<details><summary class="max-content">Make a change for someone else</summary>-->
 			<h2 class=h4>Make a change for someone else</h2>
 		 <p>To change an email address online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
@@ -141,7 +141,7 @@
          <!--   <li>Assessed tax return, notice of assessment or reassessment, other tax document, or be signed in to CRA My Account</li> -->
 		  <li><span class="fas fa-check text-success fa-li"></span>Assessed tax return, notice of assessment or reassessment, or other tax document</li>
           </ul>
-				<p>If you have a CRA account, you can also sign into your account to access your tax information.</p>
+				<p>You can also be signed in to My Account to access your tax information.</p>
 	<!--	<details><summary class="max-content">Make a change for someone else</summary>-->
 				<h2 class=h4>Make a change for someone else</h2>
             <p>You can only call on behalf of someone else in the following 2 situations:</p>
