--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-email.html
@@ -84,7 +84,7 @@
     <p>My Account users are required to have an email address on file with the CRA to help protect their accounts from fraudulent activity. You can only have one email address on file at a time.</p>
      <p>The email address you provide will be used to tell you about:</p>
 	   <ul><li>Important changes made on your account</li>
-	<li>New mail to view in your account</li>	   
+	<li>New mail to view in My Account</li>	   
 	   </ul>
 	 <!--  <p>Keeping your information up-to-date will ensure that you keep getting your <a href="">GST/HST credit</a> (including those from certain related provincial payments), <a href="">Canada child benefit payments</a> (including those from certain related provincial or territorial programs), and <a href="">advanced Canada workers benefit payments</a> you may be entitled to, as well as important correspondence from the CRA. Otherwise, your payments may stop or you may not get important correspondence like your notice of assessment.</p> -->
 	 <!--  <p>Keeping your information up-to-date will ensure you receive all your payments and correspondences.</p> -->
@@ -114,7 +114,7 @@
 	 
 <h2 class=h4>If you can't sign in to My Account</h2>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in, you will have to <a href="#details-panel2">update your information by phone</a>.</p>
-<p>For more help with My Account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help with using My Accounts</a></p>
+<p>For more help with My Account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">Help with using My Account</a></p>
 	<!--<details><summary class="max-content">Make a change for someone else</summary>-->
 			<h2 class=h4>Make a change for someone else</h2>
 		 <p>To change an email address online for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
