--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/personal-change-name.html
@@ -120,7 +120,7 @@
          <!--   <li>Assessed tax return, notice of assessment or reassessment, other tax document, or be signed in to CRA My Account</li> -->
 		  <li><span class="fas fa-check text-success fa-li"></span>Assessed tax return, notice of assessment or reassessment, or other tax document</li>
           </ul>
-				<p>If you have a CRA account, you can also sign into your account to access your tax information.</p>
+				<p>You can also be signed in to My Account to access your tax information.</p>
 	<!--	<details><summary class="max-content">Make a change for someone else</summary>-->
 				<h2 class=h4>Make a change for someone else</h2>
             <p>You can only call on behalf of someone else in the following 2 situations:</p>
