--- a/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/multi-factor-authentication-access-cra-login-services.html
@@ -243,7 +243,7 @@
   <p> If you enrolled with <strong>both options</strong>, and are having issues with the one-time passcode (e.g., you didn't receive the one-time passcode to your telephone, you misplaced your passcode grid) you can select to use the other option by choosing "different option" when prompted to enter your one-time passcode.</p>
   <p> If you only enrolled with <strong>one option</strong>, and can't use that option to provide the one-time passcode, please <u>contact us by phone</u>. </p-->
   <h2 id="section2"> Update your MFA settings</h2>
-  <p>After you sign in, go to <strong>Multi-factor authentication settings</strong> to update your current MFA settings or enroll in additional MFA options. You can:</p>
+  <p>After you sign in to My Account, My Business Account or Represent a Client, go to <strong>Multi-factor authentication settings</strong> to update your current MFA settings or enroll in additional MFA options. You can:</p>
 	<ul><li>Add or change a phone number for MFA</li>
 		<li>Change your language settings</li>
 		<li>Add or remove an MFA option</li>  
