--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -4,7 +4,7 @@
 <head prefix="og: http://ogp.me/ns#">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>Help with using your CRA accounts - Canada.ca</title>
+<title>Help with using the CRA sign-in services - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
 <link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html"/>
@@ -109,7 +109,7 @@
           <ol class="breadcrumb">
             <li><a href="https://www.canada.ca/en.html">Canada.ca</a></li>
             <li><a href="https://www.canada.ca/en/revenue-agency.html">Canada Revenue Agency</a></li>
-            <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">CRA accounts</a></li>
+            <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">CRA sign-in services</a></li>
           </ol>
         </div>
       </nav>
@@ -117,7 +117,7 @@
   </div>
 </div>
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
-  <h1 property="name" class="gc-thickline" id="wb-cont" dir="ltr">Help with using your CRA accounts</h1>
+  <h1 property="name" class="gc-thickline" id="wb-cont" dir="ltr">Help for CRA sign-in services</h1>
   <div  data-wb-urlmapping='{
 	"type=myacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_mya"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_mya\"])", "class": "wb-tgfltr-out" }], "type=mybusacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_myba"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_myba\"])", "class": "wb-tgfltr-out" }], "type=rac": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_rac"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_rac\"])", "class": "wb-tgfltr-out" }]
 }'></div>
@@ -189,8 +189,8 @@
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba  fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="securitycode.html" class="stretched-link">Validate your identity</a></h3>
-                <p><i>Interac&reg</i> document verification service, CRA security code</p>
+                <h3 class="h4 mrgn-tp-0"><a href="securitycode.html" class="stretched-link">Verify your identity</a></h3>
+                <p>The document verification service, CRA security code</p>
               </div>
             </div>
           </div>
@@ -200,14 +200,14 @@
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html" class="stretched-link">My Account: Update information</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/update-information/update-personal-information.html" class="stretched-link">My Account: Update your information</a></h3>
                 <!--  <p>Change your phone number, address, email address, or marital status</p> -->
                 <p>Change your address, phone number, direct deposit and other personal information</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business.html" class="stretched-link">My Business Account: Update information</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business.html" class="stretched-link">My Business Account: Update your information</a></h3>
                 <p>Change your business information, add more businesses to your account</p>
               </div>
             </div>
@@ -226,11 +226,11 @@
           </div>
         </section>
         <section class="wb-tagfilter-items">
-          <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Access your account</h2>
+          <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Access your sign-in service</h2>
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/availability.html" class="stretched-link">Account availability</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/availability.html" class="stretched-link">Sign-in services availability</a></h3>
                 <p>Hours of service, browser requirements</p>
               </div>
             </div>
@@ -242,14 +242,14 @@
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="about-interac-partner.html" class="stretched-link">About <i>Interac</i> sign-in partners</a></h3>
-                <p>When to use an <i>Interac</i> sign-in partner, your privacy, switching sign-in partners</p>
+                <h3 class="h4 mrgn-tp-0"><a href="about-interac-partner.html" class="stretched-link">About Sign-In Partners</a></h3>
+                <p>When to use a Sign-In Partner, your privacy, switching Sign-In Partners</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="about-provincial-partner.html" class="stretched-link">About provincial sign-in partners</a></h3>
-                <p>When to use a provincial sign-in partner, benefits and limitations</p>
+                <h3 class="h4 mrgn-tp-0"><a href="about-provincial-partner.html" class="stretched-link">About provincial partners</a></h3>
+                <p>When to use a provincial partner, benefits and limitations</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
@@ -267,11 +267,11 @@
           </div>
         </section>
         <section class="wb-tagfilter-items">
-          <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac"><!--Authorization to other accounts-->Manage your account</h2>
+          <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac"><!--Authorization to other accounts-->Manage your sign-in service</h2>
           <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="security.html" class="stretched-link"><!--Staying secure on sign-in accounts-->Keep your CRA account secure</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="security.html" class="stretched-link"><!--Staying secure on sign-in accounts-->Keep your CRA sign-in services secure</a></h3>
                 <p>Manage security options, monitor for suspicious activity</p>
               </div>
             </div>
@@ -284,7 +284,7 @@
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client/request-authorization.html" class="stretched-link">Representatives: Request authorization</a></h3>
-                <p>How to request authorization to access someone else's account</p>
+                <p>How to request authorization to access someone else's information</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
@@ -307,7 +307,7 @@
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="businesssetup.html" class="stretched-link">Set up your business to use Represent a Client</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="businesssetup.html" class="stretched-link">Manage how your business uses Represent a Client</a></h3>
                 <p>Register your business, create a BN Group, associate employees, assign taxpayers</p>
               </div>
             </div>
