--- a/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html
@@ -121,7 +121,7 @@
   <div  data-wb-urlmapping='{
 	"type=myacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_mya"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_mya\"])", "class": "wb-tgfltr-out" }], "type=mybusacct": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_myba"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_myba\"])", "class": "wb-tgfltr-out" }], "type=rac": [{"action": "selectInput", "source": "#acct-options", "value": "fltr_rac"}, { "action": "addClass", "source": ".url-fltr:not([data-wb-tags~=\"fltr_rac\"])", "class": "wb-tgfltr-out" }]
 }'></div>
-  <p>Find help with using My Account, My Business Account and Represent a Client. Learn about registering and managing your account, updating your personal and business information, and getting and giving authorization.</p>
+  <p>Find help with using My Account, My Business Account and Represent a Client. Learn about registering for and managing your sign-in service, updating your personal and business information, and getting and giving authorization.</p>
   <section id="filteredFAQ" class="wb-tagfilter provisional wb-filter" data-wb-filter='{
 		"selector": ".tag-fltr",
 		"section": ".wb-tagfilter-items",
@@ -213,7 +213,7 @@
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                <h3 class="h4 mrgn-tp-0"><a href="updaterac.html" class="stretched-link">Represent a Client: Update information</a></h3>
+                <h3 class="h4 mrgn-tp-0"><a href="updaterac.html" class="stretched-link">Represent a Client: Update your information</a></h3>
                 <p>Review and update information about yourself, your business, and your clients</p>
               </div>
             </div>
@@ -296,7 +296,7 @@
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
               <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                 <h3 class="h4 mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html" class="stretched-link">Confirm an authorization request</a></h3>
-                <p>How to verify authorization requests submitted by representatives using the CRA's accounts</p>
+                <p>How to verify authorization requests submitted by representatives using the CRA sign-in services</p>
               </div>
             </div>
             <div class="col-sm-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
