--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-trust.html
@@ -310,7 +310,7 @@ About My Trust Account</h1>
 	<li>Select <strong>Primary Trustee registration</strong></li>
 	<li>Provide information about the trust account as part of an enhanced validation process</li>
 </ol>
-	<p>After being confirmed as the primary trustee of the trust account, they will receive immediate access to My Trust Account and be able to add additional trustees, or authorized representatives to My Trust Account.</p>
+	<p>After being confirmed as the primary trustee of the trust account, they will receive immediate access to My Trust Account and be able to add additional trustees (applies to Bare Trusts only), or authorized representatives to My Trust Account.</p>
 	
 	
 	<h2 id="section3">Sign in through Represent a Client</h2>
