--- a/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/my-account-services.html
+++ b/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/my-account-services.html
@@ -302,7 +302,7 @@
 </tr><tr><td>Notification preferences</td>
 <td class="text-success text-center"><span class="glyphicon glyphicon-ok">&nbsp;</span> <span class="wb-inv">Yes</span></td>
 <td class="text-success text-center"><span class="glyphicon glyphicon-ok">&nbsp;</span> <span class="wb-inv">Yes</span></td>
-</tr><tr><td>View mail</td>
+</tr><tr><td>Mail</td>
 <td class="text-danger text-center"><span class="glyphicon glyphicon-remove">&nbsp;</span> <span class="wb-inv">No</span></td>
 <td class="text-success text-center"><span class="glyphicon glyphicon-ok">&nbsp;</span> <span class="wb-inv">Yes</span></td>
 </tr><tr><td>Request a remittance voucher</td>
