--- a/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
@@ -101,7 +101,7 @@
 	<h2 id="section2">Benefits and limitations</h2>
 <p>Registering with a provincial partner allows you to:</p>
     <ul class="fa-ul">
-     <li><span class="fas fa-check text-success fa-li"></span>Get immediate access to most services</li>
+     <li><span class="fas fa-check text-success fa-li"></span>Get immediate access to My Account</li>
      <li><span class="fas fa-check text-success fa-li"></span>Register even if you haven’t filed your taxes in the previous 2 years, as long as you have filed your taxes at least once in the past</li>
     </ul>
     <p>With a provincial partner you cannot use certain services, including:</p>
